<resources>
    <string name="app_name">Five9 Record</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.
    </string>

    <string name="new_recording">New Recording</string>
    <string name="recording">Recording</string>
    <string name="serial_port">USB serial device:</string>
    <string name="radio">Radio:</string>
    <string name="audio_input">Audio input:</string>
    <string name="title_activity_recording">RecordingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="no_serial_ports_found">No USB serial ports found</string>
    <string name="no_audio_devs_found">No audio input devices found</string>
    <string name="baud_rate">Baud rate:</string>
    <string name="start_recording">Start Recording</string>
    <string name="qth_precision">QTH Precision:</string>
    <string name="qth_in_metatrack">Include location in metadata track</string>
    <string name="qth_settings_note">Note: In system settings, location can be disabled entirely or its precision can be reduced for this app.</string>
    <string name="no_recordings">No recordings yet…</string>
    <string name="connecting_to_radio">Connecting…</string>
    <string name="connecting_to_radio_detail">Connecting to %1$s</string>
    <string name="error">Error</string>
    <string name="connect_radio_error">Could not connect to radio:\n\n%1$s.\n\nHint: %2$s</string>
    <string name="could_not_start_recording">Could not start recording</string>
    <string name="cannot_start_recording_no_serial">
        Cannot start recording without a connected USB serial port.\n\nWithout a serial port only Emulated radio can be used.
    </string>
    <string name="back">Back</string>
    <string name="cannot_start_recording_no_audio">Cannot start recording without an audio input device.</string>
    <string name="permission_error">Permission Error</string>
    <string name="permissions_not_granted">The following permissions were not granted:</string>
    <string name="recording_start_error_permissions">
        Recording cannot be started.\n\nHint: App permissions can be configured in the system settings.
    </string>
    <string name="stop_recording">Stop</string>
    <string name="recording_ongoing">Recording in progress…</string>
    <string name="duration">Duration</string>
    <string name="file">File</string>
    <string name="stop_recording_prompt">Stop recording?</string>
    <string name="stop_recording_prompt_text">Are you sure you want to stop the current recording?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="size">Size</string>
    <string name="preview">Preview</string>
    <string name="recording_error">Recording Error</string>
    <string name="recording_error_detail">The recording was stopped due to an error:</string>
    <string name="baud_rate_hint_ft891">The baud rate should match FT-891 configuration item 05-06.</string>
</resources>
